--- a/HTML-basico/Aula02/Tarefa/css/style.css
+++ b/HTML-basico/Aula02/Tarefa/css/style.css
@@ -1,20 +1,20 @@
-body{
+body {
   background-color: black;
   text-align: left;
   font-family: sans-serif;
 }
 
-h1{
+h1 {
   color: red;
 }
 
-h2{
+h2 {
   color: white;
   
 }
 
-ul{
-  margin-left: -40px;
+ul { 
+  padding-left: 0;
 }
 
 li {
