--- a/JavaScript/Aula05/styles/style.css
+++ b/JavaScript/Aula05/styles/style.css
@@ -1,22 +1,45 @@
 body {
     font-family: sans-serif;
     background-color: silver;
+    height: 100vh;
+}
 
-    position: absolute;
+main {
+    position: relative;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
+    transform: translateY(-50%);
+}
+
+img {
+    display: block;
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    
 }
 
 button {
+    display: block;
+    margin: auto;
     margin-top: 30px;
     height: 60px;
     width: 150px;
     font-size: 20px;
     border-radius: 100px;
     background-color: lightgreen;
+    cursor: pointer;
+    border: none;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+button:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+body.body-off {
+    background-color: white;
+}
+
+button.button-off {
+    background-color: tomato;
 }
