--- a/HTML-CSS/Atividade-Final/style/style.css
+++ b/HTML-CSS/Atividade-Final/style/style.css
@@ -76,7 +76,7 @@ header {
 
 header h2 {
     font-weight: bolder; 
-    font-size: 40px;
+    font-size: 2.5em;
     color: white;
     text-align: left;
     margin: 0;
@@ -86,7 +86,7 @@ header h2 {
 }
 
 header h2 span {
-    font-size: 75px;
+    font-size: 1.87em;
 }
 
 
@@ -97,7 +97,7 @@ main {
     text-align: center;
     border-radius: 15px;
     padding: 40px 60px;
-    box-shadow: 0.01em 0.01em 1em rgba(238, 130, 238, 0.295);
+    
 }
 
 main h2 {
@@ -115,7 +115,7 @@ section h2 {
     flex-direction: row;
     justify-content: space-around;
     border-radius: 15px;
-    box-shadow: 0.01em 0.01em 1em rgba(238, 130, 238, 0.295);
+    
 
 }
 
@@ -127,11 +127,12 @@ section h2 {
     border-radius: 15px;
     margin: 10px;
     width: 300px;
+    text-align: center;
 }
 
 .valor i {
     
-    font-size: 60px;
+    font-size: 4em;
     margin-left: 35px;
     color: rgba(0, 255, 255, 0.397);
     margin: 10px;
@@ -153,7 +154,7 @@ section h2 {
 }
 
 .valor .descricao:hover {
-    box-shadow: 0.01em 0.01em 1em rgba(238, 130, 238, 0.295);
+    box-shadow: 0.1em 0.1em 1em rgba(0, 255, 255, 0.425);
 }
 
 section {
@@ -162,7 +163,7 @@ section {
 }
 
 section h2 {
-    font-size: 40px;
+    font-size: 2.5em;
     margin-bottom: 40px;
 }
 
@@ -208,9 +209,8 @@ section h2 {
 
 /*Projetos  -----------------------------------------------------------------------------------------*/
 .projetos{
-    box-shadow: 0.01em 0.01em 1em rgba(238, 130, 238, 0.295); 
     border-radius: 15px;
-    padding: 5px 0px;
+    padding: 5px 0px;  
 }
 .projeto {
     margin: 30px;
@@ -219,7 +219,8 @@ section h2 {
     flex-direction: row;
     border-radius: 15px;
     justify-content: space-around;
-    background-color: var(--primaryDarkColor);    
+    background-color: var(--primaryDarkColor); 
+     
 }
 
 .projeto .texto {
@@ -234,6 +235,24 @@ section h2 {
     border-radius: 15px;
 }
 
+.button-projeto {
+    margin-right: 60px;
+    padding: 8px 25px;
+    border-radius: 15px;
+    cursor: pointer;
+    color: white;
+    background-color: transparent;
+    border: 2px solid var(--primaryAsccentColor);
+    font-size: 1em;
+    float: right;
+}
+
+.button-projeto:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    background-color: var(--primaryAsccentColor);
+    color: var(--primaryDarkColor);
+}
+
 /*Formulario  ----------------------------------------------------------------------------------------*/
 form {
     margin: auto;
@@ -241,7 +260,6 @@ form {
     background-color:var(--primaryDarkColor);
     padding: 20px 40px 60px 40px;
     border-radius: 15px;
-    box-shadow: 0.01em 0.01em 1em rgba(238, 130, 238, 0.295);
 }
 
 input, label, textarea {
@@ -266,7 +284,7 @@ button[type="submit"] {
     background-color: transparent;
     border: 2px solid var(--primaryAsccentColor);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    font-size: 18px;
+    font-size: 1em;
 
 }
 
@@ -299,7 +317,7 @@ footer {
 
 .social i {
     padding: 0 20px;
-    font-size: 30px;
+    font-size: 1em;
 }
 
 .social a {
@@ -310,7 +328,11 @@ footer {
 
 
 @media (max-width: 700px) {
-    
+    .container {
+        margin: 0 0;
+        padding: 0 0;
+    }
+
     #links { 
         display: none;
     }
@@ -318,7 +340,7 @@ footer {
     #menu-hamburger {
         display: block;
         padding: 20px;
-        font-size: 40px;
+        font-size: 2.2em;
     }
 
     nav {
@@ -331,13 +353,13 @@ footer {
         line-height: 1.2;
     }
     header h2 {
-        font-size: 20px;
+        font-size: 1.3em;
         padding-top: calc(30vh - 91px);
         max-width: 242px;
         margin: auto;
     }
     header h2 span {
-        font-size: 37px;
+        font-size: 1.89em;
     }
 
     section {
@@ -351,24 +373,66 @@ footer {
         flex-direction: column;
         justify-content: center;
         margin: auto;
+        
+        
     }
+
+    .valor .descricao {
+        height: 60%;
+        max-width: none;
+        min-width: none; 
+    }
+
+    .valor {
+        padding: 20px 30px;
+        box-sizing: border-box;
+        border-radius: 15px;
+        margin:auto;
+        width: 300px;
+        margin-bottom: 20px;
+        margin-top: 20px;        
+    }
+
+    
 
     .social i {
         padding: 0 10px;
-        font-size: 20px;
+        font-size: 1em;
     }
 
     .projeto {
         flex-wrap: wrap;
+        margin: 30px;
+        padding:10px 10px;
+        background-color: black;
     }
 
     .projeto .texto{
-        font-size: 10px;
+        font-size: 0.875em;
+        padding: 10px 10px;
+        margin: 15px;
+        width: 500px;
+        text-align: center;
+        box-shadow: 0.01em 0.01em 1em rgba(238, 130, 238, 0.295);  
+    }
+
+    .projeto .texto p {
+        display: none;
     }
 
     .projeto img {
-        max-width: 150px;
+        max-width: 250px;
+        border-radius: p15x;
+        margin: 20px;
+    }
+
+    .projetos{
         border-radius: 15px;
-        
+        padding: 5px 0px;
+        background-color: var(--primaryDarkColor); 
+    }
+
+    .button-projeto {
+        margin-top: 30px;
     }
 }
